--- a/AnagramSolver.csproj
+++ b/AnagramSolver.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Algo.cs" />
     <Compile Include="Cache.cs" />
+    <Compile Include="IAlgo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UI.cs" />
